rearrange classes name and fix bottom nav links alignment

--- a/docs/.vuepress/theme/styles/fonts.scss
+++ b/docs/.vuepress/theme/styles/fonts.scss
@@ -5,7 +5,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 600;
   line-height: 1.25;
 
-  #{$contentClass}:not(.custom) > & {
+  .markdonw-content:not(.custom) > & {
     margin-bottom: 0;
 
     &:first-child {
