--- a/docs/.vuepress/theme/styles/mobile.scss
+++ b/docs/.vuepress/theme/styles/mobile.scss
@@ -3,7 +3,7 @@
 $mobileSidebarWidth: $sidebarWidth * 0.82;
 
 @media (max-width: $MQMobileNarrow) {
-  #{$contentClass} {
+  .markdonw-content {
     div[class*="language-"] {
       margin: 0.85rem -1.5rem;
       border-radius: 0;
